--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <ul>
               <li><a href="#hero" data-after="Home">Home</a></li>
               <li><a href="#services" data-after="Services">Skills</a></li>
-              <li><a href="#projects" data-after="Projects">Projects</a></li>
-              <li><a href="#about" data-after="About">About</a></li>
-              <li><a href="#contact" data-after="Contact">Contact</a></li>
+              <li><a href="#projects" data-after="Projects">projetos</a></li>
+              <li><a href="#about" data-after="About">sobre</a></li>
+              <li><a href="#contact" data-after="Contact">contato</a></li>
             </ul>
           </div>
         </div>
@@ -106,7 +106,7 @@
     <section id="projects">
       <div class="projects container">
         <div class="projects-header">
-          <h1 class="section-title">Recent projects</h1>
+          <h1 class="section-title">Projetos</h1>
         </div>
         <div class="all-projects">
           <div class="project-item">
@@ -215,7 +215,7 @@
           </div>
         </div>
         <div class="col-rig">
-          <h1 class="section-title">About Me</h1>
+          <h1 class="section-title">quem sou eu?</h1>
           <h2>Front - End Developer</h2>
           <p>
             Olá, se você chegou até aqui, primeiramente agradeço por ter tirado um tempinho e ter visitado meu portfolio.
@@ -231,7 +231,7 @@
     <!--Section About Contacts-->
     <section id="contact">
       <div class="contact container">
-        <div><h1 class="section-title">Contact Info</h1></div>
+        <div><h1 class="section-title">Contatos</h1></div>
         <div class="contact-items">
           <div class="contact-item">
             <div class="icon">
@@ -287,7 +287,7 @@
             ><h1><span>L</span>ucas <span>A</span>lmeida</h1></a
           >
         </div>
-        <h2>Yout complete web solution</h2>
+        <h2>Sua completa solução Web</h2>
         <div class="social-icon">
           <div class="social-item">
             <a href="https://www.instagram.com/lukasalmm/" target="blank"
