--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    
     <title>Portfolio</title>
   </head>
   <body>
@@ -24,8 +24,8 @@
             </div>
             <ul>
               <li><a href="#hero" data-after="Home">Home</a></li>
-              <li><a href="#services" data-after="Services">Skills</a></li>
               <li><a href="#projects" data-after="Projects">projetos</a></li>
+              <li><a href="#services" data-after="services">skills</a></li>
               <li><a href="#about" data-after="About">sobre</a></li>
               <li><a href="#contact" data-after="Contact">contato</a></li>
             </ul>
@@ -50,10 +50,10 @@
 
     <!--End Hero Section--------------------------------------------->
     <section id="projects">
-    <h1 class="section-title-projects">
+    <h1 class="section-title-projects " data-anime="left">
       Projetos
     </h1>
-    <div class="conteiner">
+    <div class="conteiner" data-anime="right">
       <div class="image fade">
         <img src="assets/Projetos/Netflix.PNG" alt="" width="100%">
      
@@ -89,7 +89,7 @@
       <img id="prev" onclick="show_image(-1)" src="assets/left (2).png" alt="">
       <img id="next" onclick="show_image(1)" src="assets/right.png" alt="">
     </div>
-      <div class="dots">
+      <div class="dots" data-anime="right">
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
@@ -104,10 +104,10 @@
 
     <!--service Section---------------------------------------------->
 
-    <section id="services">
+    <section id="services" data-anime="top">
       <div class="services container">
         <div class="service-top">
-          <h1 class="section-title">Skills</h1>
+          <h1 class="section-title" data-anime="top">Skills</h1>
         </div>
         <div class="service-bottom">
           <div class="service-item tab-border1">
@@ -170,17 +170,16 @@
     <!-- About me Section-->
     <section id="about">
       <div class="about container">
-        <div class="col-lef">
+        <div class="col-lef" data-anime="left">
           <div class="about-img">
             <img src="assets/portfolio.jpeg" alt="EUUUUUUUUUUUU" />
           </div>
         </div>
-        <div class="col-rig">
+        <div class="col-rig" data-anime="right">
           <h1 class="section-title">quem sou eu?</h1>
           <h2>Front - End Developer</h2>
           <p>
             Olá, se você chegou até aqui, primeiramente agradeço por ter tirado um tempinho e ter visitado meu portfolio.
-
             Irei me apresentar... <br> Me chamo Lucas, e tenho 25 anos de idade. Sou natural e residente de Poços de Caldas, MG. Fiz a mudança de carreira no ano passado (2021), e vim para a área de técnologia, na qual eu encantei. <br> Atualmente estudo Técnologia em Sistemas para Internet, no Instituto Federal de São João da Boa Vista e estou cada vez mais imerso neste incrível mundo, especificamente no mundo de desenvolvimento Front-End. Venho estudando muito, e praticando diáriamente, com a meta de conseguir minha primeira vaga na área.
           </p>
           <a href="https://github.com/LucasAlmeida-jpg" class="cta" target="blank">Acesse meu GitHub</a>
@@ -192,44 +191,44 @@
     <section id="contact">
       <div class="contact container">
         <div><h1 class="section-title">Contatos</h1></div>
-        <div class="contact-items">
-          <div class="contact-item">
-            <div class="icon">
+        <div class="contact-items" data-anime="right">
+          <div class="contact-item"  data-anime="right">
+            <div class="icon" data-anime="right">
               <div>
                 <img
                   src="https://img.icons8.com/material-two-tone/96/000000/phone--v1.png"
                 />
               </div>
             </div>
-            <div class="contact-info">
+            <div class="contact-info" data-anime="right" >
               <h1>Phone</h1>
-              <h2>+55 (35) 99132-9111</h2>
+              <h2>+55(35)99132-9111</h2>
             </div>
           </div>
 
-          <div class="contact-item">
-            <div class="icon">
+          <div class="contact-item" data-anime="right">
+            <div class="icon" data-anime="right">
               <div>
                 <img
                   src="https://img.icons8.com/material/96/000000/send--v1.png"
                 />
               </div>
             </div>
-            <div class="contact-info">
+            <div class="contact-info" data-anime="right">
               <h1>Email</h1>
-              <h2>Lucasalmeidagouvea123@gmail.com</h2>
+              <h2>lucasalmeidagouvea123@gmail.com</h2>
             </div>
           </div>
 
-          <div class="contact-item">
-            <div class="icon">
+          <div class="contact-item"  data-anime="right">
+            <div class="icon" data-anime="right">
               <div>
                 <img
                   src="https://img.icons8.com/material/96/000000/address--v1.png"
                 />
               </div>
             </div>
-            <div class="contact-info">
+            <div class="contact-info" data-anime="left">
               <h1>Location</h1>
               <h2>Poços de Caldas - MG - Brazil</h2>
             </div>
@@ -240,16 +239,16 @@
     <!--End Section About Contacts-->
 
     <!--Footer-->
-    <section id="footer">
-      <div class="footer container">
-        <div class="brand">
+    <section id="footer" data-anime="right">
+      <div class="footer container" data-anime="right">
+        <div class="brand" data-anime="right">
           <a href="index.html"
             ><h1><span>L</span>ucas <span>A</span>lmeida</h1></a
           >
         </div>
         <h2>Sua solução para a Web!</h2>
-        <div class="social-icon">
-          <div class="social-item">
+        <div class="social-icon" data-anime="left">
+          <div class="social-item" >
             <a href="https://www.instagram.com/lukasalmm/" target="blank"
               ><img
                 src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
