--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@
 
     <!--Footer-->
     <section id="footer" data-anime="left">
-      <div class="footer container" data-anime="left">
+      <div class="footer container" data-anime="right">
         <div class="brand" data-anime="left">
           <a href="index.html"
             ><h1><span>L</span>ucas <span>A</span>lmeida</h1></a
           >
         </div>
         <h2 data-anime="left">Sua solução para a Web!</h2>
-        <div class="social-icon" data-anime="left">
-          <div class="social-item" data-anime="left">
+        <div class="social-icon">
+          <div class="social-item">
             <a href="https://www.instagram.com/lukasalmm/" target="blank"
               ><img
                 src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
@@ -256,13 +256,13 @@
             </a>
           </div>
 
-          <div class="social-item" data-anime="left">
+          <div class="social-item">
             <a href="https://www.facebook.com/profile.php?id=100009602238726" target="blank"
               ><img src="https://img.icons8.com/color/48/000000/facebook.png" />
             </a>
           </div>
 
-          <div class="social-item" data-anime="left">
+          <div class="social-item">
             <a href="https://www.linkedin.com/in/lucas-almeida-425b781b1/"
             target="blank" ><img
                 src="https://img.icons8.com/fluency/48/000000/linkedin.png"
@@ -270,7 +270,7 @@
             </a>
           </div>
 
-          <div class="social-item" data-anime="left">
+          <div class="social-item">
             <a href="https://twitter.com/LucasAl88924047"target="blank">
               <img
                 src="https://img.icons8.com/color/48/000000/twitter--v1.png"
@@ -278,13 +278,13 @@
             </a>
           </div>
 
-          <div class="social-item" data-anime="left">
+          <div class="social-item">
             <a href="https://api.whatsapp.com/send?phone=5535991329111" target="blank">
               <img src="https://img.icons8.com/color/48/000000/whatsapp.png" />
             </a>
           </div>
         </div>
-        <p data-anime="left">Copyright &copy; 2021 Lucas. All rights reserved</p>
+        <p>Copyright &copy; 2021 Lucas. All rights reserved</p>
       </div>
     </section>
     <!--End Footer-->
