--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 />
               </div>
             </div>
-            <div class="contact-info" data-anime="left">
+            <div class="contact-info" data-anime="right">
               <h1>Location</h1>
               <h2>Poços de Caldas - MG - Brazil</h2>
             </div>
@@ -240,7 +240,7 @@
 
     <!--Footer-->
     <section id="footer" data-anime="left">
-      <div class="footer container" data-anime="right">
+      <div class="footer container" data-anime="left">
         <div class="brand" data-anime="left">
           <a href="index.html"
             ><h1><span>L</span>ucas <span>A</span>lmeida</h1></a
