--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@
             </a>
           </div>
 
+          <div class="social-item1">
+            <a href="https://github.com/LucasAlmeida-jpg" target="blank"
+              ><img src="https://img.icons8.com/fluency/47/000000/github.png"/>
+            </a>
+          </div>
+
           <div class="social-item">
             <a href="https://www.facebook.com/profile.php?id=100009602238726" target="blank"
               ><img src="https://img.icons8.com/color/48/000000/facebook.png" />
@@ -265,14 +271,6 @@
             <a href="https://www.linkedin.com/in/lucas-almeida-425b781b1/"
             target="blank" ><img
                 src="https://img.icons8.com/fluency/48/000000/linkedin.png"
-              />
-            </a>
-          </div>
-
-          <div class="social-item">
-            <a href="https://twitter.com/LucasAl88924047"target="blank">
-              <img
-                src="https://img.icons8.com/color/48/000000/twitter--v1.png"
               />
             </a>
           </div>
