--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
             </a>
           </div>
 
-          <diclass="social-item">
+          <div class="social-item">
             <a href="https://api.whatsapp.com/send?phone=5535991329111" target="blank">
-              <v img src="https://img.icons8.com/color/48/000000/whatsapp.png" />
+              <img src="https://img.icons8.com/color/47/000000/whatsapp.png" />
             </a>
           </div>
         </div>
