--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
      
     </div>
 
+    <div class="image fade">
+      <img src="assets/Projetos/clone-tinder.PNG" alt="" width="100%">
+    </div>
+
+    <div class="image fade">
+      <img src="assets/Projetos/clone-tinder2.PNG" alt="" width="100%">
+    </div>
+
       <div class="image fade">
         <img src="assets/Projetos/LandingPage.PNG" alt="" width="100%">
       </div>
