--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
       <img src="assets/Projetos/clone-tinder2.PNG" alt="" width="100%">
     </div>
 
+    <div class="image fade">
+      <img src="assets/Projetos/Spotify.PNG" alt="" width="100%">
+    </div>
+
       <div class="image fade">
         <img src="assets/Projetos/LandingPage.PNG" alt="" width="100%">
       </div>
